# sfet

./: CMakeLists.txt  Makefile  buffer.c  buffer.h  burn-x86-64.asm  burn.c  burn.h  burnstack.c  burnstack.h  cleanup.c  config.mk  config.mk.def  ctr-serpent.c  ctr-serpent.h  defaults.h  eax-serpent.c  omac-serpent.c  omac-serpent.h  pbkdf2-omac-serpent.c  poly1305-serpent.c  poly1305-serpent.h  poly1305-x86-64.asm  poly1305.c  poly1305.h  readpass.c  readpass.h  serpent-x86-64.asm  serpent.c  serpent.h  serpent8x-avx.asm  sfet.c  sha512.c  utils.c  utils.h  venom.c
src/: CMakeLists.txt  defaults.h  eax-serpent.c  eax-serpent.h  omac-serpent.c  omac-serpent.h  pbkdf2-hmac-sha256.c  pbkdf2-hmac-sha256.h  pbkdf2-hmac-sha512.c  pbkdf2-omac-serpent.c  pbkdf2-omac-serpent.h  readpass.c  serpent.c  serpent.h  sha512.c  sha512.h  utils.c  utils.h  venom.c
test-files/: crypt_A_0_1.sfet  crypt_A_0_1.venom  crypt_A_0_1048577.sfet  crypt_A_0_1048577.venom  crypt_A_0_15.sfet  crypt_A_0_15.venom  crypt_A_rnd_1.sfet  crypt_A_rnd_1.venom  crypt_A_rnd_1048577.sfet  crypt_A_rnd_1048577.venom  crypt_A_rnd_15.sfet  crypt_A_rnd_15.venom  crypt_B_0_1.sfet  crypt_B_0_1.venom  crypt_B_0_1048577.sfet  crypt_B_0_1048577.venom  crypt_B_0_15.sfet  crypt_B_0_15.venom  crypt_B_rnd_1.sfet  crypt_B_rnd_1.venom  crypt_B_rnd_1048577.sfet  crypt_B_rnd_1048577.venom  crypt_B_rnd_15.sfet  crypt_B_rnd_15.venom  crypt_C_0_1.sfet  crypt_C_0_1.venom  crypt_C_0_1048577.sfet  crypt_C_0_1048577.venom  crypt_C_0_15.sfet  crypt_C_0_15.venom  crypt_C_rnd_1.sfet  crypt_C_rnd_1.venom  crypt_C_rnd_1048577.sfet  (+4 more)
(+15 files in other folders)
